--- a/test/index.html
+++ b/test/index.html
@@ -6,7 +6,7 @@
     <title>Flickity responsive</title>
     <!-- CSS -->
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-    <link rel="stylesheet" href="flickity-responsive.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
@@ -18,6 +18,11 @@
     <script src="app.js"></script>
 </head>
 <body>
+
+<a id="github" href="https://github.com/phucbm/flickity-responsive" target="_blank">
+    <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"></a>
+<h2>Resize to see the change</h2><br>
+<div class="carousel"></div>
 
 </body>
 </html>
