:construction: update demo: init with jQuery

--- a/dev/index.html
+++ b/dev/index.html
@@ -28,8 +28,24 @@
     <p data-description></p>
 
     <section>
+        <h2>Init with vanilla JS</h2>
         <!-- Flickity HTML init -->
         <div class="carousel">
+            <div class="carousel-cell"></div>
+            <div class="carousel-cell"></div>
+            <div class="carousel-cell"></div>
+            <div class="carousel-cell"></div>
+            <div class="carousel-cell"></div>
+            <div class="carousel-cell"></div>
+            <div class="carousel-cell"></div>
+            <div class="carousel-cell"></div>
+        </div>
+    </section>
+
+    <section>
+        <h2>Init with jQuery</h2>
+        <!-- Flickity HTML init -->
+        <div class="carousel-2">
             <div class="carousel-cell"></div>
             <div class="carousel-cell"></div>
             <div class="carousel-cell"></div>
