:construction: update demo

--- a/dev/index.html
+++ b/dev/index.html
@@ -24,11 +24,14 @@
 
 <div class="container">
 
-    <h1 data-title>Flickity Responsive</h1>
-    <p data-description></p>
+    <div class="mb100">
+        <h1 data-title>Flickity Responsive</h1>
+        <p data-description></p>
+    </div>
 
-    <section>
+    <section class="mb100">
         <h2>Init with vanilla JS</h2>
+        <p>Show dots on screen smaller than 768px</p>
         <!-- Flickity HTML init -->
         <div class="carousel">
             <div class="carousel-cell"></div>
@@ -42,8 +45,9 @@
         </div>
     </section>
 
-    <section>
+    <section class="mb100">
         <h2>Init with jQuery</h2>
+        <p>Destroy on screen smaller than 768px</p>
         <!-- Flickity HTML init -->
         <div class="carousel-2">
             <div class="carousel-cell"></div>
