:construction: add custom arrows

--- a/dev/index.html
+++ b/dev/index.html
@@ -55,6 +55,20 @@
             <div class="carousel-cell"></div>
             <div class="carousel-cell"></div>
             <div class="carousel-cell"></div>
+        </div>
+    </section>
+
+    <section class="mb100">
+        <div class="d-flex jc-space-between ai-center">
+            <h2>Custom arrows</h2>
+            <div>
+                <button id="prev">Prev</button>
+                <button id="next">Next</button>
+            </div>
+        </div>
+        <div class="carousel-arrows">
+            <div class="carousel-cell"></div>
+            <div class="carousel-cell"></div>
             <div class="carousel-cell"></div>
             <div class="carousel-cell"></div>
             <div class="carousel-cell"></div>
