:construction: add slide indicators

--- a/dev/index.html
+++ b/dev/index.html
@@ -75,8 +75,9 @@
     <section class="mb100">
         <div class="d-flex jc-space-between ai-center">
             <h2>Custom arrows</h2>
-            <div>
+            <div class="d-flex ai-center" style="gap:10px;">
                 <button id="prev">Prev</button>
+                <div><span id="current">0</span>/<span id="total">0</span></div>
                 <button id="next">Next</button>
             </div>
         </div>
