--- a/dev/index.html
+++ b/dev/index.html
@@ -94,8 +94,8 @@
     <footer class="footer ta-center mb">
         <hr class="mb bold">
         <p>
-            <a href="https://github.com/viivue/easy-tab-accordion" target="_blank">
-                <svg height="32" aria-hidden="true" viewBox="0 0 16 16" version="1.1" width="32"
+            <a href="https://github.com/phucbm/flickity-responsive" target="_blank">
+                <svg height="32" aria-hidden="true" viewBox="0 0 16 16" width="32"
                      data-view-component="true"
                      class="octicon octicon-mark-github v-align-middle">
                     <path fill-rule="evenodd"
@@ -103,7 +103,7 @@
                 </svg>
             </a>
         </p>
-        <p>Copyright (c) 2022 Phuc Bui</p>
+        <p>Copyright (c) 2023 <a href="https://github.com/phucbm" target="_blank">Phuc Bui</a></p>
     </footer>
 
 </div>
