docs: update demo site

--- a/dev/index.html
+++ b/dev/index.html
@@ -27,6 +27,18 @@
 
     <div class="mb100 pt100">
         <h1 data-title>Flickity Responsive</h1>
+        <p>
+            <a href="https://github.com/phucbm/flickity-responsive/releases/latest" target="_blank">
+                <img src="https://badgen.net/github/release/phucbm/flickity-responsive" alt="release">
+            </a>
+            <a href="https://www.jsdelivr.com/package/gh/phucbm/flickity-responsive" target="_blank">
+                <img src="https://data.jsdelivr.com/v1/package/gh/phucbm/flickity-responsive/badge?style=rounded"
+                     alt="jsdeliver hit">
+            </a>
+            <a href="https://www.npmjs.com/package/flickity-responsive" target="_blank">
+                <img src="https://badgen.net/npm/dm/flickity-responsive" alt="npm download">
+            </a>
+        </p>
         <p data-description></p>
     </div>
 
