build: fix html build error due to "<="

--- a/dev/index.html
+++ b/dev/index.html
@@ -45,7 +45,7 @@
 
     <section class="mb100">
         <h2>Init with vanilla JS</h2>
-        <p>On screen <= 768px, show page dots and hide arrows.</p>
+        <p>On screen less than or equal to 768px, show page dots and hide arrows.</p>
         <!-- Flickity HTML init -->
         <div class="carousel">
             <div class="carousel-cell"></div>
@@ -76,7 +76,7 @@ const carousel = new FlickityResponsive('.carousel', {
 
     <section class="mb100">
         <h2>Init with jQuery</h2>
-        <p>On screen <= 768px, destroy carousel.</p>
+        <p>On screen less than or equal to 768px, destroy carousel.</p>
         <!-- Flickity HTML init -->
         <div class="carousel-2">
             <div class="carousel-cell"></div>
