--- a/dev/index.html
+++ b/dev/index.html
@@ -289,7 +289,7 @@ const carouselIndicator = new FlickityResponsive('.carousel-indicator', {
                 </svg>
             </a>
         </p>
-        <p>Copyright (c) 2023 <a href="https://github.com/phucbm" target="_blank">Phuc Bui</a></p>
+        <p>Copyright (c) 2021-2025 <a href="https://github.com/phucbm" target="_blank">Phuc Bui</a></p>
         <p>Please leave a <a href="https://github.com/phucbm/flickity-responsive" style="font-weight:700;">star ⭐️</a>
             to support my work. Thank you!</p>
     </footer>
