--- a/dev/index.html
+++ b/dev/index.html
@@ -7,6 +7,19 @@
 
     <title>Flickity Responsive</title>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NC8XZ762Y4"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag(){
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'G-NC8XZ762Y4');
+    </script>
 </head>
 
 <body>
