--- a/dev/index.html
+++ b/dev/index.html
@@ -215,6 +215,7 @@ const carouselArrows = new FlickityResponsive('.carousel-arrows', {
                 Use <code>data-prev-arrow</code> and <code>data-next-arrow</code> to assign custom prev/next buttons.
                 Make sure the slider element and the arrow element are in the same parent.
             </p>
+            <p>Or, add `data-flickity-wrapper` to the wrapper element of the slider and the arrows.</p>
         </details>
     </section>
 
